[🏗️ feat]: Added useMouseSelection Hook

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,4 +4,9 @@ $blue: #110226;
 $orange: #f27405;
 $black: #0d0d0d;
 
+$selection-active-color: rgb(0, 102, 204);
+$selection-opacity: 0.5;
+
+$selection-neutral-color: rgb(180, 180, 180);
+
 $line-height: 1rem;
