--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,3 +1,4 @@
+@import "./_variables.scss";
 // $default-cursor: "/assets/cursors/cursor.png";
 
 :root {
@@ -18,4 +19,13 @@ body {
 :root {
   // TODO: Add Mac like cursor
   // cursor: url($default-cursor), auto;
+}
+
+// SELECTION BOX STYLES
+.selection-box {
+  z-index: 0;
+  position: fixed;
+  border: 1px solid $selection-active-color;
+  background: rgba($selection-active-color, $selection-opacity);
+  pointer-events: none; // This makes sure the selection box doesn't block underlying elements
 }
