--- a/src/components/Desktop/Desktop.module.scss
+++ b/src/components/Desktop/Desktop.module.scss
@@ -1,6 +1,7 @@
 @import "@/scss/_variables.scss";
 
-$background-url: "/assets/images/windows11_bg.png";
+// $background-url: "/assets/images/windows11_bg.png";
+$background-url: "https://res.cloudinary.com/ddjw9761e/image/upload/f_auto,q_auto/v1/cdn%20images/aibnmjaejr16gaalpn1b";
 
 .desktop {
   position: relative;
@@ -9,6 +10,8 @@ $background-url: "/assets/images/windows11_bg.png";
   overflow: hidden;
   background-color: black;
   // TODO: Add gradient
+  display: grid;
+  grid-template-rows: max-content 1fr;
 
   & > .wallpaper {
     position: absolute;
@@ -17,8 +20,8 @@ $background-url: "/assets/images/windows11_bg.png";
     width: 100%;
     height: 100%;
     z-index: 0;
+    overflow: hidden;
     user-select: none;
-    pointer-events: none;
     background-image: url($background-url);
     background-size: auto 100%;
     background-repeat: no-repeat;
@@ -28,5 +31,9 @@ $background-url: "/assets/images/windows11_bg.png";
   & > *:not(.wallpaper) {
     position: relative;
     z-index: 1;
+  }
+
+  & > .main {
+    position: relative;
   }
 }
