--- a/src/components/Desktop/Desktop.module.scss
+++ b/src/components/Desktop/Desktop.module.scss
@@ -1,39 +1,6 @@
 @import "@/scss/_variables.scss";
 
-// $background-url: "/assets/images/windows11_bg.png";
-$background-url: "https://res.cloudinary.com/ddjw9761e/image/upload/f_auto,q_auto/v1/cdn%20images/aibnmjaejr16gaalpn1b";
-
-.desktop {
+.Desktop {
   position: relative;
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
-  background-color: black;
-  // TODO: Add gradient
-  display: grid;
-  grid-template-rows: max-content 1fr;
-
-  & > .wallpaper {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 0;
-    overflow: hidden;
-    user-select: none;
-    background-image: url($background-url);
-    background-size: auto 100%;
-    background-repeat: no-repeat;
-    background-position: center bottom;
-  }
-
-  & > *:not(.wallpaper) {
-    position: relative;
-    z-index: 1;
-  }
-
-  & > .main {
-    position: relative;
-  }
+  overflow: visible;
 }
