--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -15,6 +15,10 @@ body {
   box-sizing: border-box;
 }
 
+.dev {
+  background-color: rgba(255, 0, 0, 0.5);
+}
+
 // MAC-LIKE STYLES
 :root {
   // TODO: Add Mac like cursor
